examples, some text, better placement

--- a/examples/lncs/samplepaper.tex
+++ b/examples/lncs/samplepaper.tex
@@ -1,6 +1,6 @@
 \documentclass[runningheads]{llncs}
 \usepackage[T1]{fontenc}
-\usepackage{showframe}                      % print page margins
+\usepackage{showframe}                      % print page margins, remove when positioning is satisfying
 \usepackage{blindtext}                      % generate blind texts
 \usepackage{graphicx}                       % necessary for inserting .pdfs 
 \usepackage{hyperref}                       % "available" badge is a link to the actual DOI 
