--- a/examples/lncs/samplepaper.tex
+++ b/examples/lncs/samplepaper.tex
@@ -30,7 +30,8 @@ Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
 
 \SetWatermarkAngle{0}
 \SetWatermarkText{\raisebox{12.5cm}{%
-  \href{https://github.com/danieldietsch/ae-badges}{\includegraphics{../../cav/1-available}}% 
+  \hspace{0.1cm}%
+  \href{https://github.com/danieldietsch/ae-badges}{\includegraphics{../../cav/1-available}}%
   \hspace{9cm}%
   \includegraphics{../../cav/2-functional}%
 }}
@@ -38,7 +39,7 @@ Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
 \begin{abstract}
 \blindtext
 
-\keywords{First keyword  \and Second keyword \and Another keyword.}
+\keywords{First keyword \and Second keyword \and Another keyword.}
 \end{abstract}
 
 \section{First Section}
