adapt readme example, fix path in samplepaper relative to repo structure

--- a/examples/lncs/samplepaper.tex
+++ b/examples/lncs/samplepaper.tex
@@ -31,9 +31,9 @@ Rupert-Karls-University Heidelberg, Heidelberg, Germany\\
 \SetWatermarkAngle{0}
 \SetWatermarkText{\raisebox{12.5cm}{%
   \hspace{0.1cm}%
-  \href{https://github.com/danieldietsch/ae-badges}{\includegraphics{../../cav/1-available}}%
+  \href{https://github.com/danieldietsch/ae-badges}{\includegraphics{../../pdf/cav-alt/1-available}}%
   \hspace{9cm}%
-  \includegraphics{../../cav/2-functional}%
+  \includegraphics{../../pdf/cav-alt/2-functional}%
 }}
 
 \begin{abstract}
